--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-background-image: url('bg.GIF');
+background-image: url('bg.gif');
 background-repeat: no-repeat;
 background-size: cover;
 }
